# learn_opencv

./: CMakeLists.txt  trace_function.hpp  v02_univ_intrin.cpp  v03_intrin.cpp  v04_intrin_auto.cpp  v05_gauss.cpp  v06_warp.cpp
